# project/routes/mqtt.js
@@ -1,7 +1,6 @@
 const express = require('express');
 const router = express.Router();
 const mqttController = require('../controllers/mqttController');
-const httpEventController = require('../controllers/httpEventController');
 
 router.get('/data', mqttController.getLatestData);
 router.post('/toggle', mqttController.sendCommand);
@@ -9,6 +8,7 @@ router.post('/automation/:clientId', mqttController.setAutomation);
 router.put('/update/:ruleId', mqttController.updateAutomationRuleById);
 router.get('/getRule/:clientId', mqttController.getAutomationRulesByClientId);
 router.delete('/delete/:ruleId', mqttController.deleteAutomationRuleById);
+router.get('/powerlogs/:userId', mqttController.getPowerLogs);
 
 // /////////////////////////////////////////////////////////////
 
